Fix totoro on mobile, and make hz subscript

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ nav.card-navigation {
     width: 100%;
     background-color: #ffff;
     color: #000;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.8em;
 }
 
 .column-right {
@@ -273,3 +273,14 @@ div.content div.about {
   background-repeat: no-repeat;
 }
 
+@media only screen and (max-device-width: 768px) {
+  div.content div.about {
+    padding-bottom: 8em;
+  }
+}
+
+sub {
+  vertical-align: baseline;
+  position: relative;
+  top: 0.4em;
+}
